# group-center-client

./: .flake8  .gitignore  .ruff.toml  README.md  dep.py  glob.md  glob_py.py  install.py  publish.py  pyproject.toml  pyproject.toml.bak  requirements.txt  setup.py  start.sh  uninstall.py  version.py
.github/workflows/: python-publish-pypi.yaml
Template/NewUser/: README.md  bashrc.sh  do_for_all_user.sh  skel_update.sh  switch_cuda_version.sh
config/: __init__.py  global_config.py  r-cv-requirements.txt  r-dev-requirements.txt  requirements.txt  version.py
docs/: no_retry_queue_usage.md
group_center/: __init__.py  user_env.py  user_tools.py
group_center/client/: __init__.py
group_center/client/machine/: __init__.py  ssh_helper.py  ssh_helper_tui.py  user_manager.py
group_center/client/toolkit/: __init__.py
group_center/client/user/: shell_message.py  windows_terminal.py
group_center/config/: global_config.py  r-dev-requirements.txt  version.py
group_center/core/: __init__.py  config_core.py  group_center.py  group_center_encrypt.py  group_center_machine.py  path.py
group_center/core/feature/: __init__.py  backup_user_file.py  machine_message.py  (+3 more)
group_center/feature/: __init__.py
group_center/tools/: __init__.py
group_center/user/: __init__.py
group_center/utils/: __init__.py  envs.py
scripts/: ssh_helper_tui.ps1  uninstall_loguru.py
test/: __init__.py  message_test.py  test_machine_msg_directly.py  test_machine_msg_via_nvinotify.py
test/logger_test/: test_logger.py  test_logging_backend.py  test_loguru_backend.py  test_print_backend.py
(+41 files in other folders)
